--- a/local/resources/assets/sass/app.scss
+++ b/local/resources/assets/sass/app.scss
@@ -10,6 +10,7 @@ $fa-font-path: "../webfonts";
 @import "~admin-lte/dist/css/adminlte.css";
 @import "~admin-lte/plugins/bootstrap/css/bootstrap.min.css";
 @import "~admin-lte/plugins/iCheck/square/blue.css";
+@import "~bootstrap-toggle/css/bootstrap-toggle.min.css";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
