--- a/local/resources/assets/sass/app.scss
+++ b/local/resources/assets/sass/app.scss
@@ -14,3 +14,4 @@ $fa-font-path: "../webfonts";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
+@import "library/hummingbird-treeview.css";
