--- a/css/backend.css
+++ b/css/backend.css
@@ -97,3 +97,7 @@
   -webkit-box-shadow: 2px 4px 6px 0 rgba(0, 0, 0, 0.1);
           box-shadow: 2px 4px 6px 0 rgba(0, 0, 0, 0.1);
 }
+
+.main-image img {
+  width: 100%;
+}
