--- a/local/resources/assets/sass/frontend/common/common.scss
+++ b/local/resources/assets/sass/frontend/common/common.scss
@@ -3,4 +3,5 @@ $fa-font-path: "../webfonts";
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
+@import "~@fortawesome/fontawesome-free/scss/regular.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
